--- a/index.html
+++ b/index.html
@@ -296,42 +296,42 @@
 
     <section class="pagina" id="paginaBeleza2">
       <div class="conteudo">
-        <img src="assets/ela_1.jpg" alt="Ela 1" class="foto">
+        <img src="assets/Ela_1.jpg" alt="Ela 1" class="foto">
         <button class="continuar">Próxima foto</button>
       </div>
     </section>
 
     <section class="pagina" id="paginaBeleza3">
       <div class="conteudo">
-        <img src="assets/ela_2.jpg" alt="Ela 2" class="foto">
+        <img src="assets/Ela_2.jpg" alt="Ela 2" class="foto">
         <button class="continuar">Próxima foto</button>
       </div>
     </section>
 
     <section class="pagina" id="paginaBeleza4">
       <div class="conteudo">
-        <img src="assets/ela_3.jpg" alt="Ela 3" class="foto">
+        <img src="assets/Ela_3.jpg" alt="Ela 3" class="foto">
         <button class="continuar">Próxima foto</button>
       </div>
     </section>
 
     <section class="pagina" id="paginaBeleza5">
       <div class="conteudo">
-        <img src="assets/ela_4.jpg" alt="Ela 4" class="foto">
+        <img src="assets/Ela_4.jpg" alt="Ela 4" class="foto">
         <button class="continuar">Próxima foto</button>
       </div>
     </section>
 
     <section class="pagina" id="paginaBeleza6">
       <div class="conteudo">
-        <img src="assets/ela_5.jpg" alt="Ela 5" class="foto">
+        <img src="assets/Ela_5.jpg" alt="Ela 5" class="foto">
         <button class="continuar">Próxima foto</button>
       </div>
     </section>
 
     <section class="pagina" id="paginaBeleza7">
       <div class="conteudo">
-        <img src="assets/ela_6.jpg" alt="Ela 6" class="foto">
+        <img src="assets/Ela_6.jpg" alt="Ela 6" class="foto">
         <button class="continuar">Ir para o texto</button>
       </div>
     </section>
